--- a/index.html
+++ b/index.html
@@ -12,8 +12,36 @@
 <body>
 
   <!--Body starts here-->
-
+  <!--var data = [4, 8, 15, 16, 23, 42];-->
   <div class="chart">
+
+    <svg class="chart" width="420" height="120">
+      <g transform = "translate(0,0)">
+        <rect width="40" height="19" />
+        <text x="37" y="9.5" dy=".35em">4</text>
+      </g>
+      <g transform = "translate(0,20)">
+        <rect width="80" height="19" />
+        <text x="77" y="9.5" dy=".35em">8</text>
+      </g>
+      <g transform = "translate(0,40)">
+        <rect width="150" height="19" />
+        <text x="147" y="9.5" dy=".35em">15</text>
+      </g>
+      <g transform = "translate(0,60)">
+        <rect width="160" height="19" />
+        <text x="157" y="9.5" dy=".35em">16</text>
+      </g>
+      <g transform = "translate(0,80)">
+        <rect width="230" height="19" />
+        <text x="227" y="9.5" dy=".35em">23</text>
+      </g>
+      <g transform = "translate(0,100)">
+        <rect width="420" height="19" />
+        <text x="417" y="9.5" dy=".35em">42</text>
+      </g>
+    </svg>
+
   </div>
 
   <!--Body ends here-->
